# Work

./: .gitignore
1A/S5/UE Traitement du Signal et Automatique/Traitement du Signal/: TP1.m  TP2.m
1A/S6/UE Réseaux/Projet Internet/: START  STOP
1A/S6/UE Télécommunications/: TP1.m  TP2_1.m
2A/: package-lock.json
2A/S8/: collage.m
2A/S8/DL/TP/: DL21_TP4_Estimation_de_Posture_Sujet.ipynb  TP3_Classification_de_chiens_et_chats_Sujet.ipynb  TP5_Estimation_de_Posture_Sujet.ipynb  TP6_Localisation_dobjet_Sujet.ipynb  TP_Réseaux_de_Neurones_avec_Numpy_Sujet.ipynb
2A/S8/EDP/: TP-EDP.ipynb
2A/S8/Geometrique/Projet/: CourbesFermees.cs  Projet.cs
2A/S8/Geometrique/TP1/: Assembly-CSharp.csproj  Interpolateur.cs  InterpolateurDeSurface.cs  TP1.sln  Trajectoire.cs
2A/S8/Geometrique/TP2/: Assembly-CSharp.csproj  Bernstein.cs  CalculHodographe.cs  DeCasteljauSubdivision.cs  InterpolateurDeSurface.cs  SurfaceBezierTriangulaire.cs  TP2.sln
2A/S8/Geometrique/TP3/: CourbesFermees.cs  CourbesOuvertes.cs
2A/S8/IMR/: IMR.tar
2A/S8/IMR/tpTI-v2022.0.0-rc3/: CMakeCache.txt  Makefile  cmake_install.cmake
2A/S8/IMR/tpTI-v2022.0.0-rc3/src/tp/: CMakeLists.txt  Makefile  cmake_install.cmake  kmeans.cpp  meanshift.cpp  test.cpp
2A/S8/Modelisation/Donnees/: TP_maillage.m  TP_maillage_suite.m
2A/S8/OpenMP/OpenMP/: a.out  aux.h.gch  barrier.c  critical_names.c  locks_set.c  locks_test.c  loops.c  master.c  reduction.c  scheds.c  tasks_if.c  tasks_loop.c  taskwait.c
2A/S8/OpenMP/TP_lu/: lu_par_loop.c  lu_par_tasks.c
2A/S8/OpenMP/TP_tree/: treetrav_par.c
(+1677 files in other folders)
